--- a/GUI/RobotManager/mainWindow.ui
+++ b/GUI/RobotManager/mainWindow.ui
@@ -6,111 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>429</width>
-    <height>445</height>
+    <width>446</width>
+    <height>570</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Mr. Robot Manager</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGroupBox" name="groupBox_server_settings">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>201</width>
-      <height>111</height>
-     </rect>
-    </property>
-    <property name="mouseTracking">
-     <bool>false</bool>
-    </property>
-    <property name="contextMenuPolicy">
-     <enum>Qt::DefaultContextMenu</enum>
-    </property>
-    <property name="autoFillBackground">
-     <bool>true</bool>
-    </property>
-    <property name="title">
-     <string>Connection settings - Server</string>
-    </property>
-    <widget class="QLabel" name="label_serverIP">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>30</y>
-       <width>66</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>IP Addr:</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_serverPort">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>60</y>
-       <width>66</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Port:</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_serverIP">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>20</y>
-       <width>113</width>
-       <height>27</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>192.168.1.35</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_serverPort">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>50</y>
-       <width>51</width>
-       <height>27</height>
-      </rect>
-     </property>
-     <property name="inputMask">
-      <string/>
-     </property>
-     <property name="text">
-      <string>5000</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_serverEnable">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>80</y>
-       <width>111</width>
-       <height>23</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Enable</string>
-     </property>
-    </widget>
-   </widget>
    <widget class="QGroupBox" name="groupBox_PID">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>130</y>
-      <width>251</width>
-      <height>141</height>
+      <y>180</y>
+      <width>281</width>
+      <height>211</height>
      </rect>
     </property>
     <property name="mouseTracking">
@@ -123,13 +33,13 @@
      <bool>true</bool>
     </property>
     <property name="title">
-     <string>PID - Angle and Speed Parameters</string>
+     <string>PID Controllers</string>
     </property>
     <widget class="QLabel" name="label_KpAngle">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>30</y>
+       <y>50</y>
        <width>66</width>
        <height>17</height>
       </rect>
@@ -142,7 +52,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>60</y>
+       <y>80</y>
        <width>66</width>
        <height>17</height>
       </rect>
@@ -155,7 +65,7 @@
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>20</y>
+       <y>40</y>
        <width>62</width>
        <height>27</height>
       </rect>
@@ -171,7 +81,7 @@
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>50</y>
+       <y>70</y>
        <width>62</width>
        <height>27</height>
       </rect>
@@ -187,7 +97,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>90</y>
+       <y>110</y>
        <width>66</width>
        <height>17</height>
       </rect>
@@ -200,7 +110,7 @@
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>80</y>
+       <y>100</y>
        <width>62</width>
        <height>27</height>
       </rect>
@@ -215,8 +125,8 @@
     <widget class="QPushButton" name="pushButton_sendPID">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>110</y>
+       <x>170</x>
+       <y>170</y>
        <width>101</width>
        <height>23</height>
       </rect>
@@ -228,8 +138,8 @@
     <widget class="QLabel" name="label_KiSpeed">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>60</y>
+       <x>140</x>
+       <y>80</y>
        <width>66</width>
        <height>17</height>
       </rect>
@@ -241,8 +151,8 @@
     <widget class="QLabel" name="label_KpSpeed">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>30</y>
+       <x>140</x>
+       <y>50</y>
        <width>66</width>
        <height>17</height>
       </rect>
@@ -254,8 +164,8 @@
     <widget class="QDoubleSpinBox" name="doubleSpinBox_KiSpeed">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>50</y>
+       <x>180</x>
+       <y>70</y>
        <width>62</width>
        <height>27</height>
       </rect>
@@ -270,8 +180,8 @@
     <widget class="QLabel" name="label_KdSpeed">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>90</y>
+       <x>140</x>
+       <y>110</y>
        <width>66</width>
        <height>17</height>
       </rect>
@@ -283,8 +193,8 @@
     <widget class="QDoubleSpinBox" name="doubleSpinBox_KdSpeed">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>80</y>
+       <x>180</x>
+       <y>100</y>
        <width>62</width>
        <height>27</height>
       </rect>
@@ -299,8 +209,8 @@
     <widget class="QDoubleSpinBox" name="doubleSpinBox_KpSpeed">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>20</y>
+       <x>180</x>
+       <y>40</y>
        <width>62</width>
        <height>27</height>
       </rect>
@@ -315,8 +225,8 @@
     <widget class="QPushButton" name="pushButton_sendPID_Zero">
      <property name="geometry">
       <rect>
-       <x>0</x>
-       <y>110</y>
+       <x>60</x>
+       <y>170</y>
        <width>101</width>
        <height>23</height>
       </rect>
@@ -325,12 +235,96 @@
       <string>Zero</string>
      </property>
     </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>20</y>
+       <width>101</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Angle Control</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>20</y>
+       <width>101</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Speed Control</string>
+     </property>
+    </widget>
+    <widget class="QDoubleSpinBox" name="doubleSpinBox_SetpointAngle">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>130</y>
+       <width>62</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="decimals">
+      <number>1</number>
+     </property>
+     <property name="singleStep">
+      <double>1.000000000000000</double>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>140</y>
+       <width>61</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Setpoint:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>140</y>
+       <width>61</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Setpoint:</string>
+     </property>
+    </widget>
+    <widget class="QDoubleSpinBox" name="doubleSpinBox_SetpointSpeed">
+     <property name="geometry">
+      <rect>
+       <x>210</x>
+       <y>130</y>
+       <width>62</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="decimals">
+      <number>1</number>
+     </property>
+     <property name="singleStep">
+      <double>1.000000000000000</double>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_Orientation">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>280</y>
+      <y>400</y>
       <width>121</width>
       <height>121</height>
      </rect>
@@ -420,8 +414,8 @@
    <widget class="QGroupBox" name="groupBox_Motor">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>130</y>
+      <x>320</x>
+      <y>180</y>
       <width>121</width>
       <height>181</height>
      </rect>
@@ -554,108 +548,211 @@
      </property>
     </widget>
    </widget>
-   <widget class="QGroupBox" name="groupBox_client_settings">
+   <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>10</x>
       <y>10</y>
-      <width>201</width>
-      <height>111</height>
+      <width>411</width>
+      <height>171</height>
      </rect>
     </property>
-    <property name="mouseTracking">
-     <bool>false</bool>
-    </property>
-    <property name="contextMenuPolicy">
-     <enum>Qt::DefaultContextMenu</enum>
-    </property>
-    <property name="autoFillBackground">
-     <bool>true</bool>
-    </property>
     <property name="title">
-     <string>Connection settings - Client</string>
+     <string>Connection settings</string>
     </property>
-    <widget class="QLabel" name="label_clientIP">
+    <widget class="QGroupBox" name="groupBox_server_settings">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>30</y>
-       <width>66</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>IP Addr:</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_clientPort">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>60</y>
-       <width>66</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Port:</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_clientIP">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
        <y>20</y>
-       <width>113</width>
-       <height>27</height>
+       <width>201</width>
+       <height>111</height>
       </rect>
      </property>
-     <property name="text">
-      <string>192.168.1.49</string>
+     <property name="mouseTracking">
+      <bool>false</bool>
      </property>
+     <property name="contextMenuPolicy">
+      <enum>Qt::DefaultContextMenu</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>true</bool>
+     </property>
+     <property name="title">
+      <string>Server UDP</string>
+     </property>
+     <widget class="QLabel" name="label_serverIP">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>30</y>
+        <width>66</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>IP Addr:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_serverPort">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>60</y>
+        <width>66</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Port:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_serverIP">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>20</y>
+        <width>113</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>192.168.1.35</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_serverPort">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>50</y>
+        <width>51</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="inputMask">
+       <string/>
+      </property>
+      <property name="text">
+       <string>5000</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_serverEnable">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>80</y>
+        <width>111</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Enable</string>
+      </property>
+     </widget>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_clientPort">
+    <widget class="QGroupBox" name="groupBox_client_settings">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>50</y>
-       <width>51</width>
-       <height>27</height>
+       <x>210</x>
+       <y>20</y>
+       <width>201</width>
+       <height>111</height>
       </rect>
      </property>
-     <property name="text">
-      <string>5001</string>
+     <property name="mouseTracking">
+      <bool>false</bool>
      </property>
+     <property name="contextMenuPolicy">
+      <enum>Qt::DefaultContextMenu</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>true</bool>
+     </property>
+     <property name="title">
+      <string>Client UDP</string>
+     </property>
+     <widget class="QLabel" name="label_clientIP">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>30</y>
+        <width>66</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>IP Addr:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_clientPort">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>60</y>
+        <width>66</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Port:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_clientIP">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>20</y>
+        <width>113</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>192.168.1.49</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_clientPort">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>50</y>
+        <width>51</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>5001</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_clientEnable">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>80</y>
+        <width>111</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Enable</string>
+      </property>
+     </widget>
     </widget>
-    <widget class="QPushButton" name="pushButton_clientEnable">
+    <widget class="QPushButton" name="pushButton_restartUDP">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>80</y>
+       <x>280</x>
+       <y>130</y>
        <width>111</width>
        <height>23</height>
       </rect>
      </property>
+     <property name="contextMenuPolicy">
+      <enum>Qt::PreventContextMenu</enum>
+     </property>
      <property name="text">
-      <string>Enable</string>
+      <string>Restart UDP...</string>
      </property>
     </widget>
-   </widget>
-   <widget class="QPushButton" name="pushButton_restartUDP">
-    <property name="geometry">
-     <rect>
-      <x>280</x>
-      <y>360</y>
-      <width>111</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="contextMenuPolicy">
-     <enum>Qt::PreventContextMenu</enum>
-    </property>
-    <property name="text">
-     <string>Restart UDP...</string>
-    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -663,7 +760,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>429</width>
+     <width>446</width>
      <height>25</height>
     </rect>
    </property>
