--- a/GUI/WifiMonitor/mainWindow.ui
+++ b/GUI/WifiMonitor/mainWindow.ui
@@ -664,7 +664,7 @@
         </rect>
        </property>
        <property name="minimum">
-        <double>-100.000000000000000</double>
+        <double>-99.989999999999995</double>
        </property>
        <property name="singleStep">
         <double>0.500000000000000</double>
@@ -717,6 +717,9 @@
           <height>27</height>
          </rect>
         </property>
+        <property name="minimum">
+         <double>-99.989999999999995</double>
+        </property>
         <property name="singleStep">
          <double>0.010000000000000</double>
         </property>
@@ -733,6 +736,9 @@
         <property name="decimals">
          <number>2</number>
         </property>
+        <property name="minimum">
+         <double>-99.989999999999995</double>
+        </property>
         <property name="singleStep">
          <double>0.500000000000000</double>
         </property>
@@ -745,6 +751,9 @@
           <width>69</width>
           <height>27</height>
          </rect>
+        </property>
+        <property name="minimum">
+         <double>-99.989999999999995</double>
         </property>
         <property name="singleStep">
          <double>0.010000000000000</double>
@@ -812,7 +821,10 @@
          </rect>
         </property>
         <property name="decimals">
-         <number>2</number>
+         <number>3</number>
+        </property>
+        <property name="minimum">
+         <double>-99.989999999999995</double>
         </property>
         <property name="singleStep">
          <double>0.500000000000000</double>
@@ -840,6 +852,12 @@
           <height>27</height>
          </rect>
         </property>
+        <property name="decimals">
+         <number>3</number>
+        </property>
+        <property name="minimum">
+         <double>-99.989999999999995</double>
+        </property>
         <property name="singleStep">
          <double>0.010000000000000</double>
         </property>
@@ -865,6 +883,12 @@
           <width>69</width>
           <height>27</height>
          </rect>
+        </property>
+        <property name="decimals">
+         <number>3</number>
+        </property>
+        <property name="minimum">
+         <double>-99.989999999999995</double>
         </property>
         <property name="singleStep">
          <double>0.010000000000000</double>
@@ -894,7 +918,7 @@
         </rect>
        </property>
        <property name="minimum">
-        <double>-100.000000000000000</double>
+        <double>-99.989999999999995</double>
        </property>
        <property name="singleStep">
         <double>0.500000000000000</double>
@@ -974,6 +998,9 @@
          <height>27</height>
         </rect>
        </property>
+       <property name="minimum">
+        <double>-99.989999999999995</double>
+       </property>
        <property name="singleStep">
         <double>0.100000000000000</double>
        </property>
@@ -987,6 +1014,9 @@
          <height>27</height>
         </rect>
        </property>
+       <property name="minimum">
+        <double>-99.989999999999995</double>
+       </property>
        <property name="singleStep">
         <double>0.010000000000000</double>
        </property>
@@ -999,6 +1029,9 @@
          <width>69</width>
          <height>27</height>
         </rect>
+       </property>
+       <property name="minimum">
+        <double>-99.989999999999995</double>
        </property>
        <property name="singleStep">
         <double>0.010000000000000</double>
@@ -1151,7 +1184,7 @@
      <widget class="QLineEdit" name="lineEdit_pitch_tab_PID">
       <property name="geometry">
        <rect>
-        <x>220</x>
+        <x>210</x>
         <y>270</y>
         <width>71</width>
         <height>27</height>
@@ -1164,7 +1197,7 @@
      <widget class="QLabel" name="label_31">
       <property name="geometry">
        <rect>
-        <x>180</x>
+        <x>170</x>
         <y>280</y>
         <width>67</width>
         <height>17</height>
@@ -1177,7 +1210,7 @@
      <widget class="QLabel" name="label_32">
       <property name="geometry">
        <rect>
-        <x>310</x>
+        <x>290</x>
         <y>280</y>
         <width>81</width>
         <height>17</height>
@@ -1190,7 +1223,7 @@
      <widget class="QLineEdit" name="lineEdit_timestamp">
       <property name="geometry">
        <rect>
-        <x>400</x>
+        <x>370</x>
         <y>270</y>
         <width>71</width>
         <height>27</height>
@@ -1203,7 +1236,7 @@
      <widget class="QLineEdit" name="lineEdit_dt">
       <property name="geometry">
        <rect>
-        <x>520</x>
+        <x>510</x>
         <y>270</y>
         <width>71</width>
         <height>27</height>
@@ -1216,14 +1249,14 @@
      <widget class="QLabel" name="label_33">
       <property name="geometry">
        <rect>
-        <x>490</x>
+        <x>450</x>
         <y>280</y>
-        <width>21</width>
-        <height>17</height>
+        <width>61</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>dt</string>
+       <string>Setpoint</string>
       </property>
      </widget>
     </widget>
